Support for sampling serialized objects during test suite execution (#10638)
Introduces serialized objects sampling option when running tests.

Introduces maven profile to sample and output serialized objects to file, to be used for compatibility tests.
Removes dependency on SerializationServiceV1 implementation in tests where
interface can be used instead.
Renames test classes used as user objects to include Test in their name